Preventing Drawer slide-in scroll flickering

--- a/src/renderer/components/app.scss
+++ b/src/renderer/components/app.scss
@@ -29,6 +29,7 @@ html {
 
 html, body {
   height: 100%;
+  overflow: hidden;
 }
 
 #app {
